# DocShield-AI

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
Document-Demo/: DEMO_QUESTIONS.md  acme_bank_statement.txt  acme_insurance_policy.txt  acme_investment_summary.txt  acme_kyc_document.txt  acme_loan_agreement.txt  edge_off_topic_query_bait.txt  edge_small_table.txt  globex_bank_statement.txt  globex_investment_summary.txt  globex_loan_agreement.txt  injection_01_direct.txt  (+3 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/admin/: router.py
backend/app/audit/: logger.py
backend/app/auth/: jwt.py  router.py
backend/app/db/: models.py  postgres.py  qdrant.py
backend/app/eval/: ragas_runner.py  router.py
backend/app/ingestion/: av_scan.py  chunker.py  classifier.py  embedder.py  injection_scan.py  pii_mask.py  pii_vault.py  pipeline.py  router.py  sandbox.py  sanitize.py
backend/app/ingestion/parsers/: __init__.py  docx.py  pdf.py  txt.py  xlsx.py
backend/app/query/: context_scan.py  llm.py  parent_merge.py  person_grounding.py  prompt.py  reranker.py  retriever.py  router.py
backend/app/seed/: golden_qa.json  seed_tenants.py
backend/app/workers/: rq_worker.py  tasks.py
backend/db/init/: 01_app_role.sql
backend/migrations/: env.py
backend/migrations/versions/: 0001_init.py  0002_pii_vault.py
backend/tests/: conftest.py  test_chunker.py  test_injection.py  test_isolation.py  test_person_grounding.py  test_pii_masking.py  test_sanitize.py
frontend/: index.html  (+2 more)
(+10 files in other folders)
