[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "befree-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30",
  "pydantic[email]>=2.9,<3",
  "pydantic-settings>=2.5",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "python-jose[cryptography]>=3.3",
  "passlib>=1.7.4",
  "bcrypt<4.1",
  "python-multipart>=0.0.12",
  "redis>=5.1",
  "rq>=1.16,<2.0",
  "qdrant-client>=1.11,<1.12",
  "httpx>=0.27",
  "litellm>=1.49",
  "sentence-transformers>=3.0",
  "transformers>=4.44,<5",
  "presidio-analyzer>=2.2.354",
  "presidio-anonymizer>=2.2.354",
  "spacy>=3.7,<3.8",
  "pdfplumber>=0.11",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "ragas>=0.1.21",
  "datasets>=3.0",
  "tenacity>=9.0",
  "cryptography>=43.0",
  "pytest>=8.0",
]